# xp-filmstrip-photo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download_fixtures.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: frontend-e2e.yml  frontend-tests.yml  main.yml  rust-tests.yml
.sonarlint/: connectedMode.json
backend/: .env.example  .gitignore  Cargo.toml  TESTING.md  build.rs
backend/src/: api.rs  auth.rs  image_handler.rs  main.rs
frontend/: app.vue  cypress.config.ts  nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/components/: FolderTree.vue
frontend/app/pages/: [...slug].vue
frontend/components/: AboutDialog.vue  DetailsView.vue  FilmstripView.vue  FolderTree.vue  Slideshow.vue  TaskPane.vue  ThumbnailsView.vue  XpCircleButton.vue  XpPushButton.vue
frontend/composables/: useApiFetch.ts  useAuth.ts  useExplorer.ts  useFileType.ts  useHistory.ts  usePath.ts
frontend/cypress/e2e/: spec.cy.ts
frontend/cypress/support/: e2e.ts
frontend/i18n/locales/: en.json  ja.json
frontend/layouts/: about.vue
frontend/pages/: [...slug].vue  about-internal.vue
frontend/pages/.__ui/: about.vue  login.vue
frontend/pages/slideshow/: [...slug].vue
frontend/tests/setup/: browserMocks.ts
frontend/tests/unit/: useApiFetch.test.ts  useAuth.test.ts  usePath.test.ts
static-generator/: .gitignore  index.ts  package.json  server.ts  tsconfig.json
