[package]
name = "backend"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http1", "http2", "json"] }
base64 = "0.22.1"
bcrypt = "0.18.0"
dotenv = "0.15.0"
fast_image_resize = "6.0.0"
httpdate = "1.0.3"
image = "0.25.9"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.10.9", features = ["std"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
walkdir = "2.5.0"

[build-dependencies]
chrono = "0.4.43"
